# mini-c-ares

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
c-ares-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs
c-ares-sys/src/: ffi.rs  lib.rs
src/: channel.rs  cname.rs  host.rs  hostent.rs  ns.rs  ptr.rs  types.rs  utils.rs
