[package]
name = "mini-c-ares"
license = "MIT"
version = "0.2.0"
description = """
A minimal Rust wrapper for the c-ares library, for asynchronous DNS requests, based on rust-c-ares
"""
repository = "https://github.com/zh-jq/mini-c-ares"
documentation = "https://docs.rs/mini-c-ares"
readme = "README.md"
keywords = ["DNS", "c-ares"]
categories = ["api-bindings", "asynchronous", "network-programming"]
edition = "2021"
include = ["src/**/*", "LICENSE.txt", "README.md", "CHANGELOG.md"]

[dependencies]
bitflags = "2.0"
c-ares-sys = { package = "mini-c-ares-sys", version = "0.2.0", path = "c-ares-sys" }
libc = "0.2"
itertools = "0.11"

[features]
default = []
vendored = ["c-ares-sys/vendored"]

[workspace]
