[package]
name = "mini-c-ares-sys"
license = "MIT"
version = "0.2.0"
links = "cares"
description = "Minimal Low-level bindings to the c-ares library, based on c-ares-sys"
repository = "https://github.com/zh-jq/mini-c-ares"
readme = "README.md"
keywords = ["DNS", "c-ares"]
categories = ["external-ffi-bindings", "network-programming"]
edition = "2021"
include = [
  "src/*",
  "LICENSE.txt",
  "README.md",
  "CHANGELOG.md",
  "build.rs",
]

[build-dependencies]
pkg-config = "0.3.27"
c-ares-src = { package = "mini-c-ares-src", version = "0.2", optional = true }

[dependencies]
libc = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
jni-sys = "0.3"

[features]
default = []
vendored = ["c-ares-src"]

